--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "cross-env": "^6.0.3",
+    "dotenv": "^8.2.0",
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
     "react-materialize": "^3.4.1",
